--- a/index.html
+++ b/index.html
@@ -28,9 +28,9 @@
 				<!-- One -->
 					<section id="one">
 						<header class="major">
-							<h1>My Name is Sierra Bush</h1>
+							<h1>MY NAME IS SIERRA BUSH</h1>
 						</header>
-						<p>Here is a showcasing of my projects and skillset.</p>
+						<p>I am a programmer and student. I am actively broadening my knowledge and skills within the technology and software development world. </p>
 						<ul class="actions">
 							<li><a href="#" class="button">Check It Out</a></li>
 						</ul>
