--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 						<header class="major">
 							<h1>MY NAME IS SIERRA BUSH</h1>
 						</header>
-						<p>I am a programmer and student. I am actively broadening my knowledge and skills within the technology and software development world. </p>
+						<p>I am a programmer and student. I am actively broadening my knowledge and skills within the world of technology and software development. Briefly explore my experience and skillset below. </p>
 						<ul class="actions">
 							<li><a href="#" class="button">Check It Out</a></li>
 						</ul>
